GOVSI-670: Protect transitions in `VerifyCodeHandler` for 2FA codes